--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "author": "Ali Yemenli",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.15.3"
+    "@discordjs/opus": "^0.9.0",
+    "discord.js": "^14.15.3",
+    "ffmpeg-static": "^5.2.0",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "eslint": "^9.6.0"
