--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@discordjs/opus": "^0.9.0",
     "axios": "^1.7.2",
     "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
+    "mongoose": "^8.5.1",
+    "rootpath": "^0.1.2",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
