--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
+    "app-root-path": "^3.1.0",
     "axios": "^1.7.2",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.1",
-    "rootpath": "^0.1.2",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
