--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
-    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.1",
     "ytdl-core": "^4.11.5"
   },
